Java 17, newer Ember version that exports BOM